package com.clue.idl;

// enumerator
//-----------------------------------------------------------------------------
enum MessageType {
    MsgReqJoin = 0;
    MsgReqLog = 1;
    MsgNotiLog = 2;
    MsgReqRoomList = 3;
    MsgResRoomList = 4;
}

// request, response, notification
//-----------------------------------------------------------------------------
message ReqJoin {
	required string roomId = 1;
}

message ReqLog {
	required string message = 1;
	required int32 level = 2;
}

message NotiLog {
	required string message = 1;
	required int32 level = 2;
}

message ReqRoomList {
	required int32 pageCount = 1;
}

message ResRoomList {
	repeated Room rooms = 1;
}

// model class
//-----------------------------------------------------------------------------
message Room {
	required string roomId = 1;
	required int32 count = 2;
}
