
message Join {
	optional string roomId = 1;
}

message Message {
	optional string message = 1;
	optional int32 level = 2;
}

message RoomList {
	repeated RoomInfo rooms = 1;
}

message RoomInfo {
	required string roomId = 1;
	required int32 count = 2;
}
